fix update user css ,upload photo z-index

--- a/public/css/device_create.css
+++ b/public/css/device_create.css
@@ -219,7 +219,8 @@
 
 .upload_btn {
 	cursor:pointer;
-	z-index:2;
+	z-index:10;
+	position:relative;
 	width:100%;	
 }
 
@@ -230,7 +231,7 @@
 	left: 4%;
 	z-index: 4;
 	width: 92%;
-	height: 74%;
+	height: 75%;	
 	border-radius: 17%;
 }
 
@@ -339,7 +340,7 @@
 	  left: 4%;
 	  z-index: 4;
 	  width: 92%;
-	  height: 71%;
+		height: 75%;		
 	  border-radius: 17%;
 	}  	
 }
