--- a/public/css/device_update_index.css
+++ b/public/css/device_update_index.css
@@ -72,11 +72,29 @@
 	padding:3.6%;
 }
 
-#img_wrapper {
-	position:relative;
+
+#pic {
+	display:none;
+	position: absolute;
+	top: 3.5%;
+	left: 4%;
+	z-index: 4;
+	  width: 92%;
+	  height: 81%;	
+	border-radius: 17%;
+}
+
+#img_wrapper  {
+  width: 16%;
 	float:left;
-	width:20%;
-	text-align:left;
+	margin-right:5%;
+  position: relative;
+}
+
+#upload_btn {
+	position:relative;
+	z-index:10;	
+	width:100%;
 }
 
 #info_wrapper {
